// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@dbfg/cli > --recursive > /dbf-cli/lib --prepend-package > /lib/lib.dart 1`] = `
"export 'package:dbf-cli/component.dart';
export 'package:dbf-cli/main.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src > /src/components/components.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/nested.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src > /src/components/nested/nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src > /src/src.dart 1`] = `
"export 'components/components.dart';
export 'main.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src --excluded-files main.dart > /src/components/components.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/nested.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src --excluded-files main.dart > /src/components/nested/nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src --excluded-files main.dart > /src/src.dart 1`] = `
"export 'components/components.dart';
export 'main.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components > /src/components/components.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/nested.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components > /src/components/nested/nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --append-folder-name > /src/components/components_components.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/nested_nested.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --append-folder-name > /src/components/nested/nested_nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --exclude-freezed > /src/components/components.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'nested/nested.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --exclude-freezed > /src/components/nested/nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --exclude-generated > /src/components/components.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/nested.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --exclude-generated > /src/components/nested/nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --prepend-folder-name > /src/components/components_components.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/nested_nested.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components --prepend-folder-name > /src/components/nested/nested_nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components -n out > /src/components/nested/out.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components -n out > /src/components/out.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/out.dart';
"
`;

exports[`@dbfg/cli > --recursive > /dbf-cli/src/components/nested > /src/components/nested/nested.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > runs a complex example (--exclude-freezed --exclude-generated --excluded-files *_one.dart -n complex) > /src/components/complex.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
export 'nested/complex.dart';
"
`;

exports[`@dbfg/cli > --recursive > runs a complex example (--exclude-freezed --exclude-generated --excluded-files *_one.dart -n complex) > /src/components/nested/complex.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --recursive > uses a config file > /src/components/json.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/json.dart';
"
`;

exports[`@dbfg/cli > --recursive > uses a config file > /src/components/nested/json.dart 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/lib --prepend-package 1`] = `
"export 'package:dbf-cli/component.dart';
export 'package:dbf-cli/main.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src --excluded-files main.dart 1`] = `
"export 'main.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src 1`] = `
"export 'main.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src/components --append-folder-name 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src/components --exclude-freezed 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src/components --exclude-generated 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src/components --prepend-folder-name 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src/components -n out 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src/components 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
"
`;

exports[`@dbfg/cli > --regular > /dbf-cli/src/components/nested 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --regular > runs a complex example (--exclude-freezed --exclude-generated --excluded-files *_one.dart -n complex) 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --regular > uses a config file 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/lib --prepend-package 1`] = `
"export 'package:dbf-cli/component.dart';
export 'package:dbf-cli/main.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src --excluded-files main.dart 1`] = `
"export 'components/component_one.dart';
export 'components/component_three.dart';
export 'components/component_three.g.dart';
export 'components/component_two.dart';
export 'components/component_two.freezed.dart';
export 'components/nested/component_one.dart';
export 'components/nested/component_three.dart';
export 'components/nested/component_two.dart';
export 'main.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src 1`] = `
"export 'components/component_one.dart';
export 'components/component_three.dart';
export 'components/component_three.g.dart';
export 'components/component_two.dart';
export 'components/component_two.freezed.dart';
export 'components/nested/component_one.dart';
export 'components/nested/component_three.dart';
export 'components/nested/component_two.dart';
export 'main.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src/components --append-folder-name 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src/components --exclude-freezed 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src/components --exclude-generated 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src/components --prepend-folder-name 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src/components -n out 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src/components 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > /dbf-cli/src/components/nested 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > runs a complex example (--exclude-freezed --exclude-generated --excluded-files *_one.dart -n complex) 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_two.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;

exports[`@dbfg/cli > --subfolders > uses a config file 1`] = `
"export 'component_one.dart';
export 'component_three.dart';
export 'component_three.g.dart';
export 'component_two.dart';
export 'component_two.freezed.dart';
export 'nested/component_one.dart';
export 'nested/component_three.dart';
export 'nested/component_two.dart';
"
`;
